--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,8 +103,8 @@ ul li a {
 }
 
 .site_logo {
-    width: 70px;
-    height: 30px;
+    width: 100%;
+    height: 50px;
 }
 
 /* 2.2 Form Inputs */
